--- a/src/pages/blog/2019-01-14-balloons.md
+++ b/src/pages/blog/2019-01-14-balloons.md
@@ -3,6 +3,8 @@ templateKey: blog-post
 title: ' Balloons'
 date: 2019-01-14T15:04:10.000Z
 description: Balloons are for special occasions. They set the mood...
+attachments:
+  - "/img/balloons.jpg"
 tags:
   - art
   - balloons
