website conversion to cms

--- a/src/pages/blog/2019-01-14-balloons.md
+++ b/src/pages/blog/2019-01-14-balloons.md
@@ -1,6 +1,9 @@
 ---
 templateKey: blog-post
 title: ' Balloons'
+meta_title: Wayne Ruff Studio
+meta_description: >-
+  Wayne Ruff Studio features artwork by Kansas City artist Wayne Ruff.
 date: 2019-01-14T15:04:10.000Z
 description: Balloons are for special occasions. They set the mood...
 attachments:
